...
                                        <rect key="frame" x="20" y="30" width="100" height="315"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UJ6-oJ-lF1" customClass="RoundedButton" customModule="Stampyt" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="0.0" width="100" height="107.5"/>
                                                <color key="backgroundColor" red="0.22152601520000001" green="0.22152601520000001" blue="0.22152601520000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                                <state key="normal" title="Valider">
                                                    <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                                </state>
                                                <connections>
                                                    <action selector="validateClicked" destination="YJc-OZ-ov7" eventType="touchUpInside" id="WFA-gr-9Ar"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xEV-yv-4l0" customClass="RoundedButton" customModule="Stampyt" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="207.5" width="100" height="107.5"/>
                                                <color key="backgroundColor" red="0.22152601520000001" green="0.22152601520000001" blue="0.22152601520000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                                <state key="normal" title="Annuler">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="cancelClicked" destination="YJc-OZ-ov7" eventType="touchUpInside" id="lDy-ZH-CE9"/>
                                                </connections>
                                            </button>
...
                                        <rect key="frame" x="20" y="30" width="100" height="315"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KLG-yF-7OE" customClass="RoundedButton" customModule="Stampyt" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="0.0" width="100" height="107.5"/>
                                                <color key="backgroundColor" red="0.22152601520000001" green="0.22152601520000001" blue="0.22152601520000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
                                                <state key="normal" title="Envoyer">
                                                    <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                                </state>
                                                <connections>
                                                    <action selector="sendShootingClicked" destination="GDu-P1-Rqk" eventType="touchUpInside" id="YOs-dg-RGg"/>
                                                </connections>
                                            </button>
...
